just adding an image for us to use if we want

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <link rel="stylesheet" href="azure.css">
 </head>
   <body>
-    Welcome to the redesign
+      <img src="azure.png" width="50px"/> Welcome to the non-affiliated redesign of Microsoft's Azure interface
   </body>
 </html>
