just a silly little jQuery thing if we want to use it, hover over white div.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
+  <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="azure.js"></script>
   <link rel="stylesheet" href="azure.css">
 </head>
-  <body>
-      <img src="azure.png" width="50px"/> Welcome to the non-affiliated redesign of Microsoft's Azure interface
-  </body>
+
+<body>
+  <img src="azure.png" width="50px" /> Welcome to the non-affiliated redesign of <a href="portal.azure.com">Microsoft's Azure</a> interface
+  <br><br><div class="subWindow" id="x" style="width: 300px; height: 200px;">
+
+    </div>
+
+  </card>
+</body>
+
 </html>
