--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
   <img src="azure.png" width="50px" /> Welcome to the non-affiliated redesign of <a href="portal.azure.com">Microsoft's Azure</a> interface
   <br><br><div class="subWindow" id="x" style="width: 300px; height: 200px;">
-
     </div>
+    <div class="subWindow" id="z2" style="width: 300px; height: 200px;" />
 
   </card>
 </body>
