Now this is actually more like the little subwindows in Azure

--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html>
 
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="azure.js"></script>
-  <link rel="stylesheet" href="azure.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="azure.js"></script>
+    <link rel="stylesheet" href="azure.css">
 </head>
 
 <body>
-  <img src="azure.png" width="50px" /> Welcome to the non-affiliated redesign of <a href="portal.azure.com">Microsoft's Azure</a> interface
-  <br><br><div class="subWindow" id="x" style="width: 300px; height: 200px;">
-    </div>
-    <div class="subWindow" id="z2" style="width: 450px; height: 350px;" />
-
-  </card>
+    <img src="azure.png" width="50px" /> Welcome to the non-affiliated redesign of
+    <a href="portal.azure.com">Microsoft's Azure</a> interface
+    <br>
+    <br>
+    <div class="subWindow" id="x" style="width: 300px; height: 200px; float: left;"> </div>
+    <div class="subWindow" id="z2" style="width: 450px; height: 350px; float: left;"> </div>
 </body>
 
 </html>
