--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <img src="azure.png" width="50px" /> Welcome to the non-affiliated redesign of
-    <a href="portal.azure.com">Microsoft's Azure</a> interface
+    <a href="https://portal.azure.com">Microsoft's Azure</a> interface
     <br>
     <br>
     <div class="subWindow" id="x" style="width: 300px; height: 200px; float: left;"> </div>
