forgot the smiley

--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
             </div>
         </div>
         <div class='nav-link' href="x"><span class="text-link"><i class="far fa-question-circle fa-lg"></i></span></div>
+        <div class='nav-link' href="x"><img class="image-link" src="smile.svg" alt="feedback" height="55%"></div>
         <div class='nav-link' href="x"><img class="image-link" src="gear.svg" alt="settings" height="45%"></div>
         <div class='nav-link' href="x"><span class="text-link"><i class="fas fa-terminal"></i></span></div>
         <div class='nav-link' href="x"><img class="image-link" src="bell.svg" alt="notifications" height="45%"></div>
         <div class='nav-link' href="x" id="searchIcon"><img class="image-link" src="mag.svg" alt="search" height="45%"></div>
-        <div class='nav-search-bar input-group mb-3' href="x" id="searchBar">
+        <div class='nav-search-bar input-group mb-2' href="x" id="searchBar">
             <div class="input-group-prepend">
-                <span class="input-group-text search-background-mag" id="magaddon"><img class="image-link" src="mag.svg" alt="search" height="45%"></span>
+                <span class="input-group-text search-background-mag" id="magaddon"><img class="image-link" src="mag.svg" alt="search" height="80%"></span>
             </div>
-            <input type="text" class="form-control search-bar search-background">
+            <input type="text" class="form-control search-bar search-background" id="searchBarInput">
             <div class="input-group-append">
                 <span class="input-group-text search-background-x" id="xaddon">x</span>
             </div>
