their avatar is weird

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav id="nav">
         <div class='nav-link-brand' href="x"><img class="text-link" src="azure.png" height="60%"><span class="text-link">Microsoft Azure</span></div>
-        <div class='nav-link-user' href="x"><span class="img-user"><i class="fas fa-user-circle fa-2x"></i></span><span class="text-username">someone@cpp.edu<br><span class="text-organization">CAL POLY POMONA</span></span>
+        <div class='nav-link-user' href="x"><img class="img-user" src="avatar.svg" alt="avatar" height="85%"></span><span class="text-username">someone@cpp.edu<br><span class="text-organization">CAL POLY POMONA</span></span>
         </div>
         <div class="nav-link-switch" href="x" id="switch">
             <div class="form-group text-link">
