--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <nav id="nav">
-        <div class='nav-link-brand' href="x"><img class="text-link" src="azure.png" height="60%"><span class="text-link">Microsoft Azure</span></div>
+        <div class='nav-link-brand' href="https://azureredesign.github.io/"><img class="text-link" src="azure.png" height="60%"><span class="text-link">Microsoft Azure</span></div>
         <div class='nav-link-user' href="x"><img class="img-user" src="avatar.svg" alt="avatar" height="85%"></span><span class="text-username">someone@cpp.edu<br><span class="text-organization">CAL POLY POMONA</span></span>
         </div>
         <div class="nav-link-switch" href="x" id="switch">
@@ -21,12 +21,12 @@
                 </span>
             </div>
         </div>
-        <div class='nav-link' href="x"><span class="text-link"><i class="far fa-question-circle fa-lg"></i></span></div>
+        <div class='nav-link' href="x"><img class="image-link" src="help.svg" alt="help" height="55%" /></div>
         <div class='nav-link' href="x"><img class="image-link" src="smile.svg" alt="feedback" height="55%"></div>
-        <div class='nav-link' href="x"><img class="image-link" src="gear.svg" alt="settings" height="45%"></div>
+        <div class='nav-link' href="x"><img class="image-link" src="gear.svg" alt="settings" height="55%"></div>
         <div class='nav-link' href="x"><span class="text-link"><i class="fas fa-terminal"></i></span></div>
-        <div class='nav-link' href="x"><img class="image-link" src="bell.svg" alt="notifications" height="45%"></div>
-        <div class='nav-link' href="x" id="searchIcon"><img class="image-link" src="mag.svg" alt="search" height="45%"></div>
+        <div class='nav-link' href="x"><img class="image-link" src="bell.svg" alt="notifications" height="55%"></div>
+        <div class='nav-link' href="x" id="searchIcon"><img class="image-link" src="mag.svg" alt="search" height="55%"></div>
         <div class='nav-search-bar input-group mb-2' href="x" id="searchBar">
             <div class="input-group-prepend">
                 <span class="input-group-text search-background-mag" id="magaddon"><img class="image-link" src="mag.svg" alt="search" height="80%"></span>
@@ -37,14 +37,22 @@
             </div>
         </div>
     </nav>
-    <!--     
-    <img src="azure.png" width="50px" /> Welcome to the non-affiliated redesign of
-    <a href="https://portal.azure.com">Microsoft's Azure</a> interface
-    <br>
-    <br>
-    <div class="subWindow" id="x" style="width: 300px; height: 200px; float: left;"> </div>
-    <div class="subWindow" id="z2" style="width: 450px; height: 350px; float: left;"> </div> -->
-
+    <div class="menuBar">&nbsp;</div>
+    <div class="dashboardHolder">
+        <div class="dashboardHeader">Dashboard</div>
+        <div class="dashboardFunction">
+            <span class="exspace"><i class="fas fa-plus fa-sm"></i></span>new dashboard
+        </div>
+        <div class="dashboardFunction">
+            <span class="exspace"><i class="fas fa-undo fa-sm"></i></span>undo
+        </div>
+        <div class="dashboard">
+            <div class="subWindow" id="x" style="width: 300px; height: 200px; float: left;"> </div>
+            <div class="subWindow" id="z2" style="width: 450px; height: 350px; float: left;"> </div>
+            <div class="subWindow" id="z3" style="width: 50px; height: 200px; float: left;"> </div>
+            <div class="subWindow" id="z4" style="width: 200px; height: 100px; float: left;"> </div>
+        </div>
+    </div>
     <!-- jQuery & bootstrap & our script -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
