--- a/sql.html
+++ b/sql.html
@@ -39,7 +39,48 @@
         </div>
     </nav>
     <div class="menuAndDashboardHolder">
-        <div class="menuBar">&nbsp;</div>
+        <div class="menuBar">
+            <ul class="left-menu">
+                <li><a href="https://azureredesign.github.io/">Dashboard</a></li>
+                <li><a href="#">Resource Groups</a></li>
+                <li><a href="#">Compute</a>
+                    <ul>
+                        <li><a href="#">App Services</a></li>
+                        <li><a href="#">Function Apps</a></li>
+                        <li><a href="#">Virtual Machines</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Database</a>
+                    <ul>
+                        <li><a href="#">Cosmos DB</a></li>
+                        <li><a href="#">SQL</a></li>
+                        <li><a href="#">Storage Accounts</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Monitoring</a>
+                    <ul>
+                        <li><a href="#">Monitor</a></li>
+                        <li><a href="#">Advisor</a></li>
+                        <li><a href="#">Security Center</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Networking</a>
+                    <ul>
+                        <li><a href="#">Load Balancers</a></li>
+                        <li><a href="#">Virtual Networks</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Others</a>
+                    <ul>
+                        <li><a href="#">Cross Management</a></li>
+                        <li><a href="#">Billings</a></li>
+                        <li><a href="#">More Services</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Help and Support</a> </li>
+            </ul>
+        </div>
+
         <div class="serviceWindows" id="serviceWindows">
             <div class="serviceWindowHolder">
                 <div class="serviceWindow">
