fixing links all href and buttons with links need to add class link

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="menuAndDashboardHolder">
         <div class="menuBar">
             <ul class="left-menu">
-                <li><a href="https://azureredesign.github.io/">Dashboard</a></li>
+                <li><a class="link" href="https://azureredesign.github.io/">Dashboard</a></li>
                 <li><a href="#">Resource Groups</a></li>
                 <li><a href="#">Compute</a>
                     <ul>
@@ -111,7 +111,7 @@
             <div class="dashboard">
                 <div class="subWindow" id="x" style="width: 300px; height: 200px; float: left;" data-toggle="tooltip" data-html="true" title="<em>This window</em> <u>updates you</u> <b>about whether the services you've created are having any trouble.</b> If you delete this window (the x at the top right) you can always undo!"><b>Service Health</b></div>
                 <div class="subWindow" id="z2" style="width: 450px; height: 350px; float: left;" data-toggle="tooltip" data-html="true" title="<em>This window shows you and lets you</em> <u>ADD</u> <b> new Microsoft! only SQL DBs!</b>">SQL Databases
-                    <br><br><br><a href="./sql.html" class="btn btn-danger"> Add Microsoft SQL Database</a>
+                    <br><br><br><button id="addsql" href="/add.sql" class="btn btn-danger addsql">Add Microsoft SQL Database</button>
                 </div>
                 <div class="subWindow" id="z3" style="width: 50px; height: 200px; float: left;"> </div>
                 <div class="subWindow" id="z4" style="width: 200px; height: 100px; float: left;" data-toggle="tooltip" data-html="true" title="<em>This window</em> <u>just</u> <b>lets you click on it to go to our store and buy things, it doesn't show anything!</b>">
