--- a/sql.html
+++ b/sql.html
@@ -41,7 +41,7 @@
     <div class="menuAndDashboardHolder">
         <div class="menuBar">
             <ul class="left-menu">
-                <li><a href="https://azureredesign.github.io/">Dashboard</a></li>
+                <li><a class="link" href="https://azureredesign.github.io/">Dashboard</a></li>
                 <li><a href="#">Resource Groups</a></li>
                 <li><a href="#">Compute</a>
                     <ul>
