--- a/sql.html
+++ b/sql.html
@@ -4,6 +4,7 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="azure.css">
 
 </head>
@@ -140,16 +141,35 @@
                 </div>
                 <div class="serviceWindowWide" id="pricingwindow">
                     <div class="serviceWindowTitleBarWide">
+
                         <div class="serviceWindowTitleText">
                             Select pricing tier!
                         </div>
-                        <div class="serviceWindowTitleX">
-                            X
+                        <div class="serviceWindowTitleX">X
                         </div>
+                    </div>
+                    <br>
+                    <div class="btn-group choosetier">
+                        <button id="basics1" class="btn btn-info">Basic S1</button>
+                        <button id="standards2" class="btn btn-info">Standard S2</button>
+                        <button id="premium" class="btn btn-info">Premium</button>
+                        <button id="premiumrs" class="btn btn-info">PremiumRS</button>
+                    </div>
+                    <br>
+                    <div class="tierselected" id="tierselected">
+                        <h4 id="tiername"></h4>
+                        <p id="tiercontent"></p>
+                    </div>
+                    <select id="selectDTU"></select>
+                    <div id="sliderDTU" style="width:80%; margin-left:10px;"></div>
+                    <br>
+                    <select id="selectStorage"></select>
+                    <div id="sliderStorage" style="width:80%; margin-left:10px;"></div>
+                    <div class="apply">
+                        <button class="btn btn-primary" id="apply">Apply</button>
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 
@@ -161,6 +181,7 @@
     </div>
     <!-- jQuery & bootstrap & our script -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
